.history/kubernetes/ingress_20250328214215.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: event-booking-ingress
  namespace: onlineeventbooking-i221242-anooshaali
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: event-booking.local
      http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8000

          - path: /events
            pathType: Prefix
            backend:
              service:
                name: event-service
                port:
                  number: 5002

          - path: /booking
            pathType: Prefix
            backend:
              service:
                name: booking-service
                port:
                  number: 5003

          - path: /payment
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 5004

          - path: /notifications
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 5005

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
